# Chess

./: .gitignore  AGENTS.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: constants.ts  utils.ts
frontend/src/components/: AiAnalysisModal.tsx  Alert.tsx  App.tsx  BoardHistoryControls.tsx  CapturedPieces.tsx  ChessBoard.tsx  CopyLinkButton.tsx  CreateGameForm.tsx  EvalBar.tsx  Game.tsx  GameForm.tsx  HeaderSection.tsx  MenuButtons.tsx  PlayerTime.tsx  main.tsx
frontend/src/context/: navContext.tsx  useNav.ts
frontend/src/css/: AiAnalysisModal.css  Alert.css  App.css  BoardHistoryControls.css  CapturedPieces.css  ChessBoard.css  CopyLinkButton.css  CreateGameForm.css  EvalBar.css  Game.css  GameForm.css  MenuButtons.css  PlayerTime.css  index.css
frontend/src/hooks/: useDrag.tsx  useLocalStorage.ts  useMessageDisplay.tsx  useNotifications.tsx  useScroll.tsx  useTitleAnimation.tsx  useViewportWidth.tsx  useWebSocket.tsx
frontend/src/images/: index.ts
frontend/src/sounds/: index.ts
frontend/src/types/: api.ts  board.ts  game.ts  piece.ts  (+1 more)
sam/: README.md  samconfig.toml  template.yaml
sam/rust_app/: Cargo.toml
sam/rust_app/src/: connect.rs  disconnect.rs  game.rs  lib.rs  main.rs  openings.tsv  types.rs
sam/rust_app/src/helpers/: ai.rs  board.rs  engine.rs  game.rs  generic.rs  mod.rs  opening_book.rs  opening_detection.rs  pgn.rs  user.rs
sam/rust_app/src/player_action_handlers/: accept_draw.rs  analyze_position.rs  create_new_game.rs  decline_draw.rs  get_fen.rs  get_game_state.rs  get_pgn.rs  join_game.rs  leave_game.rs  lose_via_out_of_time.rs  mod.rs  move_piece.rs  offer_draw.rs  play_again.rs  resign.rs
sam/rust_app/src/types/: api.rs  board.rs  dynamo_db.rs  game.rs  lambda_runtime.rs  mod.rs  piece.rs  pieces.rs
sam/rust_app/src/utils/: api.rs  api_gateway.rs  dynamo_db.rs  mod.rs
(+9 files in other folders)
