[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.6.0"
aws_lambda_events = { version = "0.16.0", default-features = false, features = [
  "apigw",
] }
aws-sdk-dynamodb = "1.69.0"
aws-sdk-apigatewaymanagement = "1.62.0"
chrono = "0.4.40"
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"
rand = "0.9.0"
serde = "1.0.219"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "json",
] }

[[bin]]
name = "connect"
path = "src/connect.rs"

[[bin]]
name = "disconnect"
path = "src/disconnect.rs"

[[bin]]
name = "game"
path = "src/game.rs"
